# hw-fastapi-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci-cd.yml
HW_fastapi/: .env.compose  main.py  pyproject.toml  requirements.txt
HW_fastapi/migrations/versions/: b7b3fffddfe3_init.py
HW_fastapi/src/api/: auth.py  contacts.py  users.py
HW_fastapi/src/conf/: config.py
HW_fastapi/src/database/: db.py
HW_fastapi/src/repository/: contacts.py  users.py
HW_fastapi/src/schemas/: users.py
HW_fastapi/src/services/: auth.py  email.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 3ecc3880eac0_initial_commit.py  b8e6ffa45603_initial.py
src/api/: auth.py  contacts.py  router.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  tokens.py
src/services/: email.py
tests/: conftest.py  test_api_auth.py  test_api_contacts.py
tests/unit/: test_repository_contacts.py  test_repository_users.py
